Early results: edited, selectivity and latency

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 % Headers and footers
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\rhead{Khakhalin AS. Graph analysis of collision detection networks. Page \thepage}
+\rhead{EARLY DRAFT: Khakhalin AS. Graph analysis of collision detection networks. Page \thepage}
 \cfoot{} % To kill footer page numbers
 
 \begin{document} % --------------------- Document start ----------------
@@ -98,7 +98,7 @@ In different animals, looming detection seems to rely on a variety of networks a
 
 While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it actually matches the recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for more nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when collision detection is weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina to detect collisions, but also to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, these motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform course correction \citep{khakhalin2014,bhattacharyya2017assessment}, yet dimming detectors could remain as a backup, and mediate a more urgent and less coordinated response. Moreover, every time collision avoidance is not performed perfectly, these sensorimotor networks can be further refined, relying on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016}.
 
-Traditionally, the golden standard for describing the mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same statistics as a normal brain would not necessarily tell us how to “fix” this brain, even if we could rewire individual neurons in a targeted fashion.
+Traditionally, the golden standard for describing a mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same statistics as a normal brain would not necessarily tell us how to “fix” this brain, even if we could rewire individual neurons in a targeted fashion.
 
 A more promising approach is to study the origin of functional structures in the brain. Most neural networks are not truly hardwired, but dynamically “evolve” from a set of developmental rules \citep{pietri2017emergence}, similar to how it happens for Turing patterns or fractals \citep{lefevre2010reaction,bullmore2012economy}, and may also rely on streams of structured sensory information coming from the external world \citep{gao2015simplicity}. This insight is encouraging, as the agents that follow these developmental rules are individual cells and their compartments, such as active dendrites and synapses, which implies that while the ultimate product of these rules may be exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It may be therefore, that our best chance to truly “understand” the brain lies in studying the sets of rules that lead to the development of functional networks \citep{linderman2017constrain}. This approach proved to be extremely fruitful recently, as several complex network phenomena, including visual receptive fields [ref], grid cells \citep{banino2018grid}, and decision circtuis \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules and clear behavioral goals. 
 
@@ -130,7 +130,7 @@ The total output of observed tectal networks tended to be higher in response to 
 Selectivity analysis. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-To quantify selectivity of individual tectal cells, we used Cohen’s $d$ effect size, in each cell, comparing amplitudes of responses to stimuli of different types (the difference in means, divided by the pooled standard deviation). We considered two measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Overall, these results were quite unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
+To quantify selectivity of individual tectal cells, we calculated Cohen’s $d$ effect size for each cell (the difference in means, divided by the pooled standard deviation), comparing cumulative responses to different stimuli. We considered two measures of selectivity: that for "looming over flash" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivity values within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Overall, these results were quite unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
 We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not respond stronger to either of these stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones), and the value of average selectivity did not change in development ($p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
 
@@ -138,15 +138,19 @@ The selectivity for scrambled stimuli over flashes correlated with selectivity f
 
 Finally, as a most holistic way to quantify tectal network selectivity, we looked at the total power of tectal responses to predict stimulus identity \citep{avitan2016limitations}, known as "stimulus encoding" [XXX]. We ran a logistic regression on one half of the data, linking amplitudes of tectal cells responses in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data (Fig. 2F). The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t=$ 0.6).
 
-To assess the cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of cell responses within each preparation. We restricted this analysis to responses to one stimulus type (looming), as otherwise factor analysis detected cell-to-cell differences in stimulus selectivity, while we wanted to look at differences in dynamics within a response type. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles. The biggest source of variance in cell response profiles was response latency (Fig. 3A), and we noticed that early responding cells tended to group together in one part of the recorded field (Fig. 3B). We found the “center” of this group of early-responding cells in each experiment, by maximizing the correlation between distances to this center of interest, and relative scores of the early response component in each cell. The fit was robust, with $p<$ 0.05 in every experiment (30/30), and average achieved correlation of $r=$ 0.59$\pm$0.23 (Fig. 3C). To exclude the possibility of overfitting, we shuffled cell identities for each experiment 5 times, and repeated the analysis, which led to average $r$ values of only 0.13$\pm$0.06 and $p_r<$0.05 in 21\% of experiments. From that we concluded that spatial clustering of early responses to looming stimuli was not an artifact of analysis, even though our "optimization of correlations" may exaggerate the effect of this correlation. We interpreted clustering of early responses as a direct observation of a retinotopic map in the tectum \citep{ruthazer2004map}. For each cell, we also estimated the latency of its average response, and found that it positively correlated with distance from the “retinotopy center” (Fig. 3D; average $r=$ 0.35$\pm$0.24; correlations individually significant in 25/30 experiments). Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, there was no difference in precision of this functional retinotopic map between younger and older tadpoles, as correlation between the prominence of early response and distance from the retinotopy center did not improve in development (Fig. 3E; $r=$ 0.63$\pm$0.21 and 0.57$\pm$0.25 respectively, $p_t=$ 0.5), reminiscent of a similar result reported in Zebrafish \citep{avitan2016limitations}.
+To assess cell-to-cell variability of responses, we performed exploratory factor analysis (principal component analysis, followed by promax rotation) of responses within each preparation. We restricted analysis to looming stimuli, as otherwise factor analysis detected cell-to-cell differences in selectivity, while we wanted to look at differences in dynamics within a single response type. The first and second principal components explained on average 19$\pm$7\% and 4$\pm$1\% of variance in younger tadpoles, and 24$\pm$14\% and 3$\pm$1\% in older tadpoles, and were largely different response timing (Fig. 3A). Early responding cells tended to group together in one part of the recorded field (Fig. 3B), and we were able to quantify the position of this early responding group of cells in each experiment, by maximizing the correlation between distances to the center of interest, and relative scores of the early response component in each cell. The fit was robust, with $p<$ 0.05 in every experiment (30/30), and average achieved correlation of $r=$ 0.59$\pm$0.23. To assess possible overfitting, we performed same analysis after reshuffling cell identities 5 times for each experiment, which yielded average $r$ values of only 0.13$\pm$0.06, and $p_r<$ 0.05 in 21\% of experiments. From this we concluded that spatial clustering of cells with early responses to looming stimuli was not an artifact of analysis, even though "optimization of correlations" exaggerated its effect. We interpreted spatial clustering of early-responding cell is a manifestation of a retinotopic map well known to exist in the tectum \citep{ruthazer2004map}, as this map reproduced a looming stimulus projected on the retina. Across cells, the latency of average response correlated with distance from the retinotopy center ($r=$ 0.35 $\pm$ 0.24; correlations individually significant in 25/30 experiments), despite our latency estimations being noisy, especially for low-amplitude cells. Curiously, while visual projections to the tectum are known to be actively remodeled in development \citep{sakaguchi1985refinement,ruthazer2004map,munz2014hebbian}, the quality of functional retinotopic map did not differ between younger and older tadpoles, at least judging from correlations between early component prominence and cell position, that did not change in development (Fig. 3E; $r=$ 0.63 $\pm$ 0.21 and 0.57 $\pm$ 0.25 respectively, $p_t= $0.5), similar to reports in Zebrafish \citep{avitan2016limitations}.
 
-Knowing where our looming stimulus originated within the retinotopic map in the tectum, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detection was retinotopic \citep{frost2004review} and primarily based on feedback excitation \citep{jang2016}, or at the periphery, as predicted by the synfire model \citep{clopath2010stdpcoding,fiete2010chains}. We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig. 3G) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations $p_r<$0.05 in 12/14 experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, at both developmental stages, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles (Fig. 3H; $p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
+Knowing where the looming stimulus responses originated within the tectum, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detection was retinotopic \citep{frost2004review} and based on feedback excitation \citep{jang2016}, or at the periphery, as predicted by the synfire model \citep{clopath2010stdpcoding,fiete2010chains}. We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig. 3G) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations $p_r<$0.05 in 12/14 experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, at both developmental stages, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles ($p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
+
+% Note that here selectivity is based on total responses across a whole second, and so much of this spiking happens really late. As a result, cells that spike early are also sensitive. But it's not clear whether it's actually because they are selective (get more relevant activation), or just can be activated for longer (because they start earlier), or because they receive some later recurrent activation (which would be real, but not relevant for collision avoidance)
+
+% Similarly, if this thing is not observed in modeling experiments, it may be due to the absence of delayed recurrent excitation, which we didn't introduce into this model, but which is also not relevant for collision avoidance, as it just happens too late.
 
 \subsection*{Variability and ensembles}
 
-We then assessed the \textbf{trial-to trial variability} of tectal responses, to see whether it changed in development, as it was previously reported for variability of spontaneous activity \citep{xu2011}. We performed principal component analysis of response waveforms, and looked at the total number of components that was needed to describe 80\% of variability in the data \citep{avitan2017spontaneous}. We found that this number was similar in young and old tadpoles, but showed a minor increase in response richness in older animals (insignificant for each stimulus alone, but consistent across stimuli): 51$\pm$14 and 65$\pm$28, $p_t$=0.1 for responses to looming stimuli; 49$\pm$12 and 62$\pm$32, $p_t$=0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t$=0.1 for scrambled stimuli.
+We then assessed the \textbf{trial-to trial variability} of tectal responses, to see whether it changed in development, as it was reported for variability of spontaneous activity \citep{xu2011}. We performed principal component analysis of response waveforms, and looked at the total number of components that was needed to describe 80\% of variability in the data \citep{avitan2017spontaneous}. We found that this number was similar in stage 46 and 49 tadpoles, with a minor increase in response richness in older animals (insignificant for each stimulus alone, but consistent across stimuli): 51$\pm$14 and 65$\pm$28, $p_t$=0.1 for responses to looming stimuli; 49$\pm$12 and 62$\pm$32, $p_t$=0.2 for flashes; 51$\pm$14 and 64$\pm$26, $p_t$=0.1 for scrambled stimuli.
 
-To describe network activation variability, we used spectral clustering technique to find \textbf{ensembles} of tectal cells that tended to be either active or silent together on a trial-by-trial basis \citep{thompson2016ensembles}. Unlike for recordings of spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation states of our networks were driven by shared sensory inputs. Instead, we subtracted normalized average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (Fig, see “Methods”). We turned these pairwise correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity \citep{newman2006modularity,gomez2009community}. We found that the number of ensembles did not differ between younger and older tadpoles (10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t$=0.9; Fig), but in older tadpoles ensembles were less isolated from each other, producing lower values of network modularity (0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t$=0.03; Fig). This implies stronger coordination between ensembles in older tadpoles. Tectal ensembles also tended to be spatially localized (Fig): cells that shared an ensemble were on average closer to each other than to cells from different ensembles, for both younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t$=0.3).
+To describe network activation variability, we used spectral clustering technique to find \textbf{ensembles} of tectal cells that were either active together, or silent together on a trial-by-trial basis \citep{thompson2016ensembles}. Unlike for recordings of spontaneous activity, we could not easily aggregate activity states into clusters \citep{avitan2017spontaneous}, as activation in our networks was driven by shared sensory inputs. Instead, we subtracted normalized average responses of each cell from its responses in individual trials, and calculated pairwise correlations on the remaining “anomalies” of trial-by-trial activation (Fig, see “Methods”). We turned these pairwise correlations into pairwise distances in a multidimensional space, ran a series of spectral clustering partitions \citep{ng2002spectral}, and of all possible partitions, picked the one that maximized spectral modularity \citep{newman2006modularity,gomez2009community}. We found that the number of ensembles did not differ between younger and older tadpoles (10$\pm$5 in stage 45, 11$\pm$11 in stage 49; $p_t$=0.9; Fig), but in older tadpoles ensembles were less isolated from each other, producing lower values of network modularity (0.14$\pm$0.05 to 0.09$\pm$0.06, $p_t$=0.03; Fig). This implies stronger coordination between ensembles in older tadpoles. Tectal ensembles also tended to be spatially localized (Fig): cells that shared an ensemble were on average closer to each other than to cells from different ensembles, for both younger (29$\pm$9\% closer) and older animals (25$\pm$10\% closer; no difference in development $p_t$=0.3).
 
 \subsection*{Network reconstruction}
 
@@ -180,7 +184,7 @@ The property of \textbf{hierarchical flow} is a derivative measure \citep{mones2
 
 \subsection*{Selectivity Mechanisms}
 
-Even not knowing the exact architecture of collision-detecting networks in the tectum, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that these neurons may be non-randomly located within the detected connectivity graph: for example, receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network, we calculated correlation coefficients between looming selectivity of each neuron and values that quantified its positioning within the graph, known as measures of \textbf{centrality}.
+Even though the architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that these neurons may be non-randomly located within the detected connectivity graph: for example, receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network, we calculated correlation coefficients between looming selectivity of each neuron and values that quantified its positioning within the graph, known as measures of \textbf{centrality}.
 
 Looking at the \textbf{number of incoming connections} (weighted in-degree), we found that in stage 46 tadpoles it did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but in stage 49 tadpoles the correlation was significant, even if small ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells received slightly more incoming connections, compared to non-selective cells.
 
