Table 1: minor formatting

--- a/table1.tex
+++ b/table1.tex
@@ -25,16 +25,16 @@
 \hline
 Brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark \\
 Brain selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
-Av. FL selectivity $d$ & 0.6 & 0.8 & 1.0 & 0.6 & -7.0 & 0.8 & 0.5 \\
+Av. FL selectivity $d$ & \text{0.6} & \text{0.8} & \text{1.0} & \text{0.6} & -\text{7.0} & \text{0.8} & \text{0.5} \\
 Av. FL selectivity, change & = & \land & \land \lor & \land & \lor \land & \land & = \\
-\% FL select. cells & 80\% & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
+\% FL select. cells & \text{80\%} & \text{98\%} & \text{95\%} & \text{75\%} & \text{0\%} & \text{95\%} & \text{95\%}\\
 \% FL select. cells, change & = & \land & \land & \land \lor & = & \land & \land\\
 FL skew, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
 \hline
 Brain SL selectivity & \times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times  \\
-Av. SL selectivity $d$ & -0.05 & 0.5 & 0.7 & 0.5 & -0.5 & 0.2 & 0\\
+Av. SL selectivity $d$ & -\text{0.1} & \text{0.5} & \text{0.7} & \text{0.5} & -\text{0.5} & \text{0.2} & \text{0}\\
 Av. SL selectivity, change & = & \land & \land \lor & \land & \lor & \land & = \\
-\% SL select. cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
+\% SL select. cells & \text{50\%} & \text{80\%} & \text{90\%} & \text{70\%} & \text{20\%} & \text{70\%} & \text{50\%} \\
 \% SL select. cells, change & = & \land & \land & \land & \lor & \land & \lor \\
 %SL skew, change & = & \land & \land \lor & \land & - & \land \lor & -\\
 corr(FS,FL) & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark \\
